--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>lovdev-magic-copy</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="cristian-cambio" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <title>Proyecto CristianGhost – Camino a los 85 kg</title>
+    <meta name="description" content="Progreso y metas del proyecto de CristianGhost." />
+    <meta name="author" content="CristianGhost" />
+
+    <meta property="og:title" content="Proyecto CristianGhost – Camino a los 85 kg" />
+    <meta property="og:description" content="Sigue el progreso y los objetivos de CristianGhost en su camino a los 85 kg." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@cristianghost" />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
 
   <body>
